Got ToC working

--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,4 +1,6 @@
-\section*{Acknowledgments}
+\section*{\centering{Acknowledgments}}
 
 This is the acknowledgements section.  You should replace this with your
 own acknowledgements.
+
+\addcontentsline{toc}{section}{Acknowledgments}
