--- a/main.tex
+++ b/main.tex
@@ -36,15 +36,9 @@
 
 \pagenumbering{roman}
 \setcounter{page}{2}
+
 \include{acknowledgements}
-
-% Some departments (e.g. 5) require an additional signature page.  See
-% signature.tex for more information and uncomment the following line if
-% applicable.
-% \include{signature}
-
-%\include{contents}
-%\tableofcontents
+\include{contents}
 \include{abstract}
 
 \pagenumbering{arabic}
