--- a/contents.tex
+++ b/contents.tex
@@ -3,8 +3,12 @@
 %% contents and lists of figures and tables.  You can omit any or all of
 %% these files by simply taking out the appropriate command.  For more
 %% information on these files, see appendix C.3.3 of the LaTeX manual. 
+%\tableofcontents
+%\newpage
+%\listoffigures
+%\newpage
+%\listoftables
+
+%\cleardoublepage
+\addcontentsline{toc}{section}{Contents}
 \tableofcontents
-\newpage
-\listoffigures
-\newpage
-\listoftables
