Working on Hardware section

--- a/Field_Test.tex
+++ b/Field_Test.tex
@@ -3,6 +3,9 @@
 \section{Field Test scenario}
 
 \subsection{GPS Waypoints}
+GPS markers form a linearized path
+travel in a straight line from one GPS node to another
+%https://www.google.com/maps/d/edit?mid=1wKgTvF7i7Xdpi42cw1ffAOrGDVw&ll=27.38460862376806%2C-82.56151826455687&z=17
 
 \section{Results}
 
