--- a/Navigation.tex
+++ b/Navigation.tex
@@ -7,7 +7,8 @@
 	\caption{ROS control overview}
 	\includegraphics[]{gazebo_ros_control}
 	\label{fig:ros_controller}
-	
 \end{figure}
+
+Skid steering
 
 \subsection{Arduino Repeater Node}
