--- a/ROS.tex
+++ b/ROS.tex
@@ -21,3 +21,5 @@ Android app to publish IMU and GPS data from a smartphone.
 
 \section{robot\_localization package}
 odometry estimate from wheel encoders
+
+\cite{robot_localization_paper}
