--- a/mainBib.bib
+++ b/mainBib.bib
@@ -13,7 +13,30 @@
    journal = "Makeatronics",
    type = "Blog",
    year = 2013,
-   howpublished = {\url{https://web.archive.org/web/20140515005614/http://makeatronics.blogspot.com/2013/02/efficiently-reading-quadrature-with.html}},
+   howpublished = {https://web.archive.org/web/20140515005614/http://makeatronics.blogspot.com/2013/02/efficiently-reading-quadrature-with.html},
+}
+
+@MISC{fig_lynxmotion_rover,
+	author = "Lynxmotion",
+	title = "Lynxmotion Aluminum A4WD1 Rover Kit (w/ Encoders)",
+	note = "[Online: accessed April 11, 2017]",
+	url = {https://web.archive.org/web/20151208053255/http://www.robotshop.com/en/lynxmotion-aluminum-a4wd1-rover-kit-w-encoders.html},
+}
+
+@MISC{fig_arduino_uno,
+	author = "Adafruit Industries",
+	title = "Arduino Uno R3 (Atmega328 - assembled)",
+	year = "2017",
+	note = "[Online: accessed April 13, 2017]",
+	url = {http://web.archive.org/web/20170321022401/https://www.adafruit.com/product/50},
+}
+
+@MISC{fig_ping,
+	author = "Parallax",
+	title = "Parallax PING Ultrasonic Sensor",
+	year = "2017",
+	note = "[Online: accessed April 13, 2017]",
+	url = {http://web.archive.org/web/20161208012823/http://www.robotshop.com/en/parallax-ping-ultrasonic-sensor.html},
 }
 
 @MISC{fig_ros_control,
@@ -21,7 +44,22 @@
 	title = "ros_control",
 	year = "2013",
 	note = "[Online: accessed April 10, 2017]",
-	url = {\url{https://web.archive.org/web/20161019152656/http://wiki.ros.org/ros_control}},
+	url = {https://web.archive.org/web/20161019152656/http://wiki.ros.org/ros_control},
 }
+
+@MISC{fig_sabertooth,
+	author = "Dimension Engineering",
+	title = "Sabertooth Dual 12A 6V-24V Regenerative Motor Driver",
+	note = "[Online: accessed April 11, 2017]",
+	url = {https://web.archive.org/web/20160402162832/http://www.robotshop.com/en/sabertooth-dual-regenerative-motor-driver.html},
+}
+
+@ONLINE{sabertooth_arduino_tut,
+        title = "Using the Sabertooth Motor Controller with Arduino",
+        date = 2015,
+        organization = "Youtube",
+        author = "drbrono",
+        url = {https://youtu.be/QCNoVRgETRc},
+    }
 
 
