--- a/main.tex
+++ b/main.tex
@@ -30,6 +30,11 @@
 \usepackage{algpseudocode}
 \usepackage{graphicx} % package to manage images
 \graphicspath{ {figures/} }
+\usepackage{wrapfig}
+
+\usepackage[backend=biber]{biblatex}
+\addbibresource{mainBib.bib}
+
 %% These have been added at the request of the MIT Libraries, because
 %% some PDF conversions mess up the ligatures.  -LB, 1/22/2014
 \usepackage{cmap}
@@ -60,6 +65,6 @@
 %\include{appa}
 %\include{appb}
 \addcontentsline{toc}{chapter}{Bibliography}
-\include{biblio}
+\printbibliography
 \end{document}
 
