--- a/Navigation.tex
+++ b/Navigation.tex
@@ -12,3 +12,4 @@
 Skid steering
 
 \subsection{Arduino Repeater Node}
+Adjust code for conversion of ultrasonic sensor ping times to distance, to take into account the ambient air temperature
