--- a/main.tex
+++ b/main.tex
@@ -22,7 +22,7 @@
 %% Page Intentionally Left Blank'', use the ``leftblank'' option, as
 %% above. 
 
-\documentclass[12pt,twoside]{ncfthesis}
+\documentclass[12pt, doublespace]{ncfthesis}
 \usepackage{lgrind}
 \usepackage[fleqn]{mathtools}
 \usepackage{amsmath}
@@ -31,6 +31,7 @@
 \usepackage{graphicx} % package to manage images
 \graphicspath{ {figures/} }
 \usepackage{wrapfig}
+\usepackage{listings}
 
 \usepackage[backend=biber]{biblatex}
 \addbibresource{mainBib.bib}
@@ -40,7 +41,6 @@
 \usepackage{cmap}
 \usepackage[T1]{fontenc}
 \pagestyle{plain}
-
 
 
 
