--- a/mainBib.bib
+++ b/mainBib.bib
@@ -7,13 +7,38 @@
   publisher = {Springer},
 }
 
-@MISC{quadEncoders,
+@MISC{dcMotorBlog,
+   author = "Tom Igoe",
+   title = "Controlling DC Motors",
+   journal = "code, circuits, & construction",
+   type = "Blog",
+   year = 2017,
+   howpublished = {http://web.archive.org/web/20160915053759/http://www.tigoe.com:80/pcomp/code/circuits/motors/controlling-dc-motors/},
+}
+
+@MISC{encoderBlog,
    author = "Nich Fugal",
    title = "Efficiently Reading Quadrature With Interrupts",
    journal = "Makeatronics",
    type = "Blog",
    year = 2013,
    howpublished = {https://web.archive.org/web/20140515005614/http://makeatronics.blogspot.com/2013/02/efficiently-reading-quadrature-with.html},
+}
+
+@manual{sabertoothUserGuide,
+author = {Dimension Engineering},
+title = {Sabertooth 2x12 User's Guide},
+date = {April 2012},
+language = {English},
+pagetotal = {21},
+}
+
+@MISC{usbForum,
+   title = "USB 2.0 Frequently Asked Questions",
+   journal = "USB Implementers Forum, Inc.",
+   type = "Online",
+   year = 2017,
+   howpublished = {http://web.archive.org/web/20170225172623/http://www.usb.org/developers/usbfaq\#cab1},
 }
 
 @MISC{fig_lynxmotion_rover,
